--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-node": "babel-node",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
     "prepublish": "npm run build",
-    "eslint": "eslint src/**"
+    "eslint": "eslint src"
   },
   "bin": {
     "brain-games": "dist/bin/brain-games.js"
