--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain_games_of_andreirk",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "hexlet project",
   "main": "index.js",
   "scripts": {
@@ -11,7 +11,7 @@
     "eslint": "eslint src"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-even": "dist/bin/brain-games.js"
   },
   "author": "",
   "license": "ISC",
