--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "brain_games_of_andreirk",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "hexlet project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "babel-node": "babel-node",
-    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
+    "build": "babel src --out-dir dist --source-maps inline",
     "prepublish": "npm run build",
     "eslint": "eslint src"
   },
   "bin": {
-    "brain-even": "dist/bin/brain-games.js"
+    "brain-calc": "dist/bin/brain-games.js"
   },
   "author": "",
   "license": "ISC",
