--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain_games_of_andreirk",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "hexlet project",
   "main": "index.js",
   "scripts": {
@@ -13,7 +13,8 @@
   "bin": {
     "brain-even": "dist/bin/brain-even.js",
     "brain-calc": "dist/bin/brain-calc.js",
-    "brain-gcd": "dist/bin/brain-gcd.js"
+    "brain-gcd": "dist/bin/brain-gcd.js",
+    "brain-balance": "dist/bin/brain-balance.js"
     },
   "author": "",
   "license": "ISC",
