--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "brain_games_of_andreirk",
-  "version": "1.0.11",
+  "version": "1.2.0",
   "description": "hexlet project",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,9 @@
     "brain-calc": "dist/bin/brain-calc.js",
     "brain-gcd": "dist/bin/brain-gcd.js",
     "brain-balance": "dist/bin/brain-balance.js",
-    "brain-progression": "dist/bin/brain-progression.js"
+    "brain-progression": "dist/bin/brain-progression.js",
+    "brain-prime": "dist/bin/brain-prime.js"
+
     },
   "author": "",
   "license": "ISC",
